AC_PREREQ(2.59)
AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libsapo-broker, 0.1.1, miguel.filipe@caixamagica.pt)

SOVERSION=1:1:0
AC_SUBST(SOVERSION)

AC_LANG_C
AM_PROG_LIBTOOL

AC_CHECK_LIB([expat], [XML_ParserCreate], [], [AC_MSG_ERROR([lib expat not found])])
AC_CHECK_HEADER([expat.h], [], [AC_MSG_ERROR([expat.h not found])])

AC_OUTPUT(Makefile src/Makefile test/Makefile)
