noinst_PROGRAMS = test_enqueue test_publish test_consume

test_enqueue_SOURCES = test_enqueue.c
test_enqueue_LDADD = ../src/libsapo-broker2.la

test_publish_SOURCES = test_publish.c
test_publish_LDADD = ../src/libsapo-broker2.la

test_consume_SOURCES = test_consume.c
test_consume_LDADD = ../src/libsapo-broker2.la
